Fix linebreak on timetable component

--- a/frontend/src/app/application/component/content/classroom/learns/commitment/timetable/timetable.component.scss
+++ b/frontend/src/app/application/component/content/classroom/learns/commitment/timetable/timetable.component.scss
@@ -134,3 +134,9 @@
 .date-name:hover {
   color: white;
 }
+
+::ng-deep {
+  .line-break {
+    white-space: pre-line;
+  }
+}
